# REDasm-Database

./: CMakeLists.txt  README.md
formats/pe/ordinals/: mfc120!x64.json  mfc120u.json  mfc140!x64.json  mfc140.json  mfc140u!x64.json  mfc140u.json  mfc30.json  mfc40.json  mfc42!x64.json  mfc42.json  mfc42u!x64.json  mfc70.json  mfc80!x64.json  mfc80.json  mfc80u!x64.json  oleaut32.json  shell32.json  shlwapi.json  ws2_32.json
loaders/pe/ordinals/: comctl32.json  kernel32.json  mfc120.json  mfc120u!x64.json  mfc42u.json  mfc70u.json  mfc71.json  mfc71u.json  mfc80u.json  olepro32.json  shdocvw.json  wsock32.json
loaders/pe/ordinals32/: comctl32.json  kernel32.json  mfc120.json  mfc120u.json  mfc140.json  mfc140u.json  mfc30.json  mfc40.json  mfc42.json  mfc42u.json  mfc70.json  mfc70u.json  mfc71.json  mfc71u.json  mfc80.json  mfc80u.json  msvbvm50.json  msvbvm60.json  oleaut32.json  olepro32.json  shdocvw.json  shell32.json  shlwapi.json  ws2_32.json  wsock32.json
loaders/pe/ordinals64/: mfc120!x64.json  mfc120u!x64.json  mfc140!x64.json  mfc140u!x64.json  mfc42!x64.json  mfc42u!x64.json  mfc80!x64.json  mfc80u!x64.json
loaders/xbe/: xboxkrnl.json
signatures/: mfc71.json  msvc2003.json  msvc2005.json  msvc2008.json  msvc6.json  msvc6_mfc60.json  psyq.json  psyq47.json
